--- a/AdminTemplate/Views/Account/Profile.cshtml
+++ b/AdminTemplate/Views/Account/Profile.cshtml
@@ -1,4 +1,4 @@
-﻿@model UserProfileViewModel
+﻿@model UpdateProfilePasswordViewModel
 @{
     Layout = "_Layout";
     ViewBag.Title = "Profil";
@@ -32,28 +32,38 @@
                                 </button>
                             </div>
                             <div class="text-center text-sm-right">
-                                <span class="badge badge-secondary">administrator</span>
-                                <div class="text-muted"><small>Joined @Model.</small></div>
+                                @if (Context.User.IsInRole("Admin"))
+                                {
+                                    <span class="badge badge-secondary">Administrator</span>
+                                }
+                                <div class="text-muted"><small>Joined @Model.UserProfileVM.RegisterDate.ToShortDateString() </small></div>
                             </div>
                         </div>
                     </div>
 
                     <div class="tab-content pt-3">
                         <div class="tab-pane active">
-                            <form class="form" novalidate="">
+                            <form class="form" asp-controller="Account" asp-action="Profile" novalidate="">
                                 <div class="row">
+                                    <div class="col" asp-validation-summary="ModelOnly"></div>
+                                    @if (ViewBag.Message != null)
+                                    {
+                                        <div class="text text-success">@ViewBag.Message</div>
+                                    }
                                     <div class="col">
                                         <div class="row">
                                             <div class="col">
                                                 <div class="form-group">
                                                     <label class="form-label">Full Name</label>
-                                                    <input asp-for="Name" class="form-control" name="example-text-input" placeholder="Name">
+                                                    <input asp-for="UserProfileVM.Name" class="form-control" name="example-text-input" placeholder="Name">
+                                                    <span asp-validation-for="UserProfileVM.Name"></span>
                                                 </div>
                                             </div>
                                             <div class="col">
                                                 <div class="form-group">
                                                     <label class="form-label">Username</label>
-                                                    <input class="form-control" asp-for="UserName" placeholder="Username">
+                                                    <input class="form-control" asp-for="UserProfileVM.UserName" placeholder="Username">
+                                                    <span asp-validation-for="UserProfileVM.UserName"></span>
                                                 </div>
                                             </div>
                                         </div>
@@ -61,7 +71,8 @@
                                             <div class="col-6">
                                                 <div class="form-group">
                                                     <label class="form-label">Email</label>
-                                                    <input class="form-control" asp-for="Email" placeholder="user@example.com">
+                                                    <input class="form-control" asp-for="UserProfileVM.Email" placeholder="user@example.com">
+                                                    <span asp-validation-for="UserProfileVM.Email"></span>
                                                 </div>
                                             </div>
                                         </div>
@@ -89,7 +100,7 @@
                                 <div class="col">
                                     <div class="form-group">
                                         <label class="form-label">Current Password</label>
-                                        <input class="form-control" type="password" placeholder="••••••">
+                                        <input class="form-control" asp-for="ChangePasswordVM.CurrentPassword" placeholder="••••••">
                                     </div>
                                 </div>
                             </div>
@@ -97,7 +108,7 @@
                                 <div class="col">
                                     <div class="form-group">
                                         <label class="form-label">New Password</label>
-                                        <input class="form-control" type="password" placeholder="••••••">
+                                        <input class="form-control" asp-for="ChangePasswordVM.NewPassword" placeholder="••••••">
                                     </div>
                                 </div>
                             </div>
@@ -105,7 +116,7 @@
                                 <div class="col">
                                     <div class="form-group">
                                         <label class="form-label">Confirm <span class="d-none d-xl-inline">Password</span></label>
-                                        <input class="form-control" type="password" placeholder="••••••">
+                                        <input class="form-control" asp-for="ChangePasswordVM.NewPasswordConfirm" placeholder="••••••">
                                     </div>
                                 </div>
                             </div>
@@ -113,7 +124,7 @@
                     </div>
                     <div class="float-right mt-0 mb-0">
                         <button class="btn btn-secondary mr-3" type="submit">Cancel</button>
-                        <button class="btn btn-primary " type="submit">Update Profile</button>
+                        <button class="btn btn-primary " type="submit">Change Password</button>
                     </div>
                 </form>
             </div>
