--- a/AdminTemplate/Views/Shared/Partials/_Header.cshtml
+++ b/AdminTemplate/Views/Shared/Partials/_Header.cshtml
@@ -18,133 +18,44 @@
 						<input type="search" class="form-control header-search" placeholder="Search&hellip;" tabindex="1">
 					</form>
 				</div>
+				
+				@if (Context.User.Identity.IsAuthenticated)
+				{
+				    <div class="dropdown d-none d-md-flex">
+                        <a class="nav-link icon full-screen-link nav-link-bg userbtns" asp-controller="Account" asp-action="Profile">
+                            <i class="fa fa-user" ></i>
+                            Profile
+                        </a>
+                    </div>
+				    <div class="dropdown d-none d-md-flex userbtns">
+                        <a class="nav-link icon full-screen-link nav-link-bg userbtns" asp-controller="Account" asp-action="Logout">
+                            <i class="fa fa-arrow-circle-o-left" ></i>
+                            Log Out
+                        </a>
+                    </div>
+				}
+				else
+				{
+				    <div class="dropdown d-none d-md-flex">
+                        <a class="nav-link icon full-screen-link nav-link-bg userbtns" asp-controller="Account" asp-action="Login">
+                            <i class="fa fa-arrow-circle-o-right" ></i>
+                            Log in
+                        </a>
+                    </div>
+				    <div class="dropdown d-none d-md-flex userbtns">
+                        <a class="nav-link icon full-screen-link nav-link-bg userbtns" asp-controller="Account" asp-action="Register">
+                            <i class="fa fa-user-plus" ></i>
+                            Register
+                        </a>
+                    </div>
+				}
 
-				<div class="dropdown d-none d-md-flex">
-					<a class="nav-link icon full-screen-link nav-link-bg">
-						<i class="fa fa-expand" id="fullscreen-button"></i>
-					</a>
-				</div>
+                
 
-				<div class="dropdown d-none d-md-flex">
-					<a class="nav-link icon" data-toggle="dropdown">
-						<i class="fa fa-bell-o"></i>
-						<span class="nav-unread bg-warning"></span>
-					</a>
-					<div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-						<a href="#" class="dropdown-item d-flex pb-3">
-							<div class="notifyimg">
-								<i class="fa fa-thumbs-o-up"></i>
-							</div>
-							<div>
-								<strong>Someone likes our posts.</strong>
-								<div class="small text-muted">3 hours ago</div>
-							</div>
-						</a>
-						<a href="#" class="dropdown-item d-flex pb-3">
-							<div class="notifyimg">
-								<i class="fa fa-commenting-o"></i>
-							</div>
-							<div>
-								<strong> 3 New Comments</strong>
-								<div class="small text-muted">5  hour ago</div>
-							</div>
-						</a>
-						<a href="#" class="dropdown-item d-flex pb-3">
-							<div class="notifyimg">
-								<i class="fa fa-cogs"></i>
-							</div>
-							<div>
-								<strong> Server Rebooted.</strong>
-								<div class="small text-muted">45 mintues ago</div>
-							</div>
-						</a>
-						<div class="dropdown-divider"></div>
-						<a href="#" class="dropdown-item text-center">View all Notification</a>
-					</div>
-				</div>
-				<div class="dropdown d-none d-md-flex">
-					<a class="nav-link icon text-center" data-toggle="dropdown">
-						<i class="icon icon-speech"></i>
-						<span class=" nav-unread badge badge-info badge-pill">2</span>
-					</a>
-					<div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-						<a href="#" class="dropdown-item text-center">2 New Messages</a>
-						<div class="dropdown-divider"></div>
-						<a href="#" class="dropdown-item d-flex pb-3">
-							<span class="avatar brround mr-3 align-self-center cover-image" data-image-src="assets/images/faces/male/41.jpg"></span>
-							<div>
-								<strong>Madeleine</strong> Hey! there I' am available....
-								<div class="small text-muted">3 hours ago</div>
-							</div>
-						</a>
-						<a href="#" class="dropdown-item d-flex pb-3">
-							<span class="avatar brround mr-3 align-self-center cover-image" data-image-src="assets/images/faces/female/1.jpg"></span>
-							<div>
-								<strong>Anthony</strong> New product Launching...
-								<div class="small text-muted">5  hour ago</div>
-							</div>
-						</a>
-						<a href="#" class="dropdown-item d-flex pb-3">
-							<span class="avatar brround mr-3 align-self-center cover-image" data-image-src="assets/images/faces/female/18.jpg"></span>
-							<div>
-								<strong>Olivia</strong> New Schedule Realease......
-								<div class="small text-muted">45 mintues ago</div>
-							</div>
-						</a>
-						<div class="dropdown-divider"></div>
-						<a href="#" class="dropdown-item text-center">See all Messages</a>
-					</div>
-				</div>
-				<div class="dropdown d-none d-md-flex ">
-					<a class="nav-link icon " data-toggle="dropdown">
-						<i class="fe fe-grid floating"></i>
-					</a>
-					<div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-						<ul class="drop-icon-wrap p-1">
-							<li>
-								<a href="email.html" class="drop-icon-item">
-									<i class="fe fe-mail text-dark"></i>
-									<span class="block"> E-mail</span>
-								</a>
-							</li>
-							<li>
-								<a href="calendar2.html" class="drop-icon-item">
-									<i class="fe fe-calendar text-dark"></i>
-									<span class="block">calendar</span>
-								</a>
-							</li>
-							<li>
-								<a href="maps.html" class="drop-icon-item">
-									<i class="fe fe-map-pin text-dark"></i>
-									<span class="block">map</span>
-								</a>
-							</li>
-							<li>
-								<a href="cart.html" class="drop-icon-item">
-									<i class="fe fe-shopping-cart text-dark"></i>
-									<span class="block">Cart</span>
-								</a>
-							</li>
-							<li>
-								<a href="chat.html" class="drop-icon-item">
-									<i class="fe fe-message-square text-dark"></i>
-									<span class="block">chat</span>
-								</a>
-							</li>
-							<li>
-								<a href="profile.html" class="drop-icon-item">
-									<i class="fe fe-phone-outgoing text-dark"></i>
-									<span class="block">contact</span>
-								</a>
-							</li>
-						</ul>
-						<div class="dropdown-divider"></div>
-						<a href="#" class="dropdown-item text-center">View all</a>
-					</div>
-				</div>
+                
 				<div class="dropdown text-center selector">
 					<a href="#" class="nav-link leading-none" data-toggle="dropdown">
-						<span class="avatar avatar-sm brround cover-image" data-image-src="assets/images/faces/female/25.jpg"></span>
+						<span class="avatar avatar-sm brround cover-image" data-image-src="/assets/images/faces/female/25.jpg"></span>
 					</a>
 					<div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow ">
 						<div class="text-center">
