--- a/AdminTemplate/Views/Account/ConfirmResetPassword.cshtml
+++ b/AdminTemplate/Views/Account/ConfirmResetPassword.cshtml
@@ -23,12 +23,12 @@
                             <form class="card" method="post">
 
                                 <div class="card-body p-6 ">
-                                    <div class="card-title text-center">Login to your Account</div>
+                                    <div class="card-title text-center">Change Your Password</div>
                                     <div class="input-icon form-group wrap-input">
                                         <span class="input-icon-addon search-icon">
                                             <i class="mdi mdi-account"></i>
                                         </span>
-                                        <input asp-for="NewPassword" class="form-control" placeholder="Username">
+                                        <input asp-for="NewPassword" class="form-control" placeholder="NewPassword">
                                         <span class="text text-danger" asp-validation-for="NewPassword"></span>
                                     </div>
                                     <div class="input-icon form-group wrap-input">
