--- a/AdminTemplate/Views/Shared/Partials/_Scripts.cshtml
+++ b/AdminTemplate/Views/Shared/Partials/_Scripts.cshtml
@@ -16,3 +16,19 @@
 
 <!-- Custom Js-->
 <script src="\assets\js\custom.js"></script>
+
+
+<script type="text/javascript">
+    $('.dropify').dropify({
+        messages: {
+            'default': 'Drag and drop a file here or click',
+            'replace': 'Drag and drop or click to replace',
+            'remove': 'Remove',
+            'error': 'Ooops, something wrong appended.'
+        },
+        error: {
+            'fileSize': 'The file size is too big (2M max).'
+        }
+    });
+</script>
+<script src="assets\plugins\fileuploads\js\dropify.min.js"></script>
